[package]
authors = ["siaeyy"]
edition = "2024"
name = "example"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
pree = { path = "../pree", version = "*" }
wasm-bindgen = "0.2.114"
web-sys = { version = "0.3.91", features = ["CanvasRenderingContext2d"] }
speedy2d = { version = "3.0.0", features = ["windowing"] }
sharded-slab = "0.1.7"
rand = "0.10.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
