[package]
authors = ["siaeyy"]
edition = "2024"
name = "pree"
version = "0.0.0"

[dependencies]
wasm-bindgen = "0.2.114"
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3.91", features = ["CanvasRenderingContext2d"] }
speedy2d = { version = "3.0.0", features = ["windowing"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
rand = "0.10.0"
sharded-slab = "0.1.7"
